# 2024_amadeus_technical_exercise

./: .gitignore  README.md  activate.sh  pyproject.toml
.github/workflows/: deploy.yml
docs/jupyter_book/: EDA.ipynb  _config.yml  _toc.yml  intro.md  question_1.ipynb  questions.ipynb  references.bib
docs/jupyter_book/_static/: tables.css
src/: __init__.py
src/config/: data.conf  settings.conf
