[tool.poetry]
name = "2024-amadeus-technical-exercise"
version = "0.0.0"
description = ""
authors = ["Culière François <francois.culiere@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.1"
seaborn = "^0.13.2"
jupyter-book = "^1.0.0"
sphinxcontrib-mermaid = "^0.9.2"
statsmodels = "^0.14.1"
scikit-learn = "^1.4.1.post1"
nb-js-diagrammers = "^0.0.9"
pyhocon = "^0.3.60"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
